--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 title: Data Science & MLOps Project
 author: Nikolaj Ivanov
-logo: logo.png
+logo: ai.png
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
